# summary-discord-bot

./: .cursorrules  .env.sample  .gitignore  PRD.md  README.md  docker-compose.dev.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.trunk/: trunk.yaml
app/: README.md  bot.py  config.py  discordbot.py  logging.json  main.py  render.py  template.jinja2
app/channels/: scanner.py
app/dadlan/: client.py
app/humanitix/: client.py  maxhealth.py  models.py  summary.py  utils.py
app/pruner/: client.py
app/rendering/: browser.py  graphic.py
app/summariser/: client.py  messages.py  openai.py  schemas.py  utils.py
app/templates/: scroll_script.jinja2  template.full.jinja2  template.jinja2  tix.graphic.jinja2  tix.text.jinja2
containers/summarybot/: Dockerfile  launch.sh
tests/: __init__.py  test_humanitix.py  test_messages.py  test_openai.py
