[tool.poetry]
name = "summary-discord-bot"
version = "1.2.0"
description = "A Discord server summary bot for DadLAN"
authors = [
    "Liam <11690542+liammcnamara@users.noreply.github.com>",
    "davidpirogov <580286+davidpirogov@users.noreply.github.com>",
    "William Parry <williamparry@gmail.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
discord = "^2.3.2"
better-exceptions = "^0.3.3"
dpn-pyutils = "^3.12.3"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
jinja2 = "^3.1.3"
httpx = "^0.27.0"
matplotlib = "^3.9.0"
pillow = "^10.3.0"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
openai = "^1.35.7"
tiktoken = "^0.7.0"
humanize = "^4.9.0"
tokencost = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
